--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
                         <span class="bg-purple-100 text-purple-800 text-xs font-medium px-2.5 py-0.5 rounded-full">JavaScript</span>
                     </div>
                     <div class="flex space-x-4 mt-auto">
-                        <a href="https://github.com/yourusername/ecommerce-platform" target="_blank" rel="noopener noreferrer" class="flex-1 inline-flex items-center justify-center px-4 py-2 bg-gray-800 text-white rounded-md hover:bg-gray-900 transition duration-300 ease-in-out text-sm font-medium shadow-sm">
+                        <a href="https://github.com/Het-2004/Portfolio_Website" target="_blank" rel="noopener noreferrer" class="flex-1 inline-flex items-center justify-center px-4 py-2 bg-gray-800 text-white rounded-md hover:bg-gray-900 transition duration-300 ease-in-out text-sm font-medium shadow-sm">
                             <i data-lucide="github" class="w-4 h-4 mr-2"></i> GitHub
                         </a>
-                        <a href="https://demo.ecommerce.com" target="_blank" rel="noopener noreferrer" class="flex-1 inline-flex items-center justify-center px-4 py-2 bg-purple-600 text-white rounded-md hover:bg-purple-700 transition duration-300 ease-in-out text-sm font-medium shadow-sm">
+                        <a href="https://hetportfolio-lilac.vercel.app/" target="_blank" rel="noopener noreferrer" class="flex-1 inline-flex items-center justify-center px-4 py-2 bg-purple-600 text-white rounded-md hover:bg-purple-700 transition duration-300 ease-in-out text-sm font-medium shadow-sm">
                             <i data-lucide="code" class="w-4 h-4 mr-2"></i> Demo
                         </a>
                     </div>
