Fix photo filename case for Vercel deployment

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                     
                                     <!-- Photo with advanced effects -->
                                     <div class="relative group">
-                                        <img src="het_solanki_photo.jpg" alt="Het Solanki" class="w-full h-full object-cover rounded-2xl transition-all duration-700 group-hover:scale-110 group-hover:rotate-2 group-hover:shadow-2xl group-hover:shadow-cyan-500/60" onerror="this.onerror=null; this.src='https://placehold.co/400x400/0f172a/06b6d4?text=HS&font=montserrat';">
+                                        <img src="Het_Solanki_Photo.jpg" alt="Het Solanki" class="w-full h-full object-cover rounded-2xl transition-all duration-700 group-hover:scale-110 group-hover:rotate-2 group-hover:shadow-2xl group-hover:shadow-cyan-500/60" onerror="this.onerror=null; this.src='https://placehold.co/400x400/0f172a/06b6d4?text=HS&font=montserrat';">
                                         <!-- Dynamic hover overlay with gradient -->
                                         <div class="absolute inset-0 bg-gradient-to-t from-cyan-500/30 via-blue-500/10 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-700 rounded-2xl"></div>
                                         <!-- Corner accents -->
